--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>sandbox</title>
-</head>
-<body>My sandbox for personal code experiments. Public, but not for general use.</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>sandbox</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
